--- a/literature.bib
+++ b/literature.bib
@@ -97,9 +97,8 @@ doi = {10.1121/1.1984860}
 
 @misc{opencfs,
 	author = {open{CFS}},
-	title = {open{CFS}},
+	title = {{openCFS [Computer Software]}},
 	howpublished = "\url{https://opencfs.org/}",
-	year = {2022}
 }
 
 
@@ -367,4 +366,72 @@ doi = {10.1121/1.1984860}
 	author = {Nedkov, Tsvetan},
 	journal = {Technical University Sofia},
 	year = {2015}
+}
+
+@INPROCEEDINGS{Odeyemi_PML_2020,
+	author={Odeyemi, Jomiloju and Smartt, Chris and Vukovic, Ana and M.Benson, Trevor and Sewell, Phillip},
+	booktitle={2020 14th European Conference on Antennas and Propagation (EuCAP)}, 
+	title={PML Effectiveness in the Transmission Line Modelling Method for Radiation and Scattering Applications}, 
+	year={2020},
+	volume={},
+	number={},
+	pages={1-4},
+	doi={10.23919/EuCAP48036.2020.9135802}
+}
+
+@misc{PML_quickwave,
+	author = {QuickWave},
+	title = {{QuickWavve software documentation. Perfectly Matched Layer (PML)}},
+	howpublished = {\url{https://www.qwed.eu/QuickWave/help/general/3_3_1_perfectly_matched_layer_pml.htm}},
+	note = {Online; accessed: 2023-01-10}
+}
+
+@misc{PML_comsol,
+	author = {Comsol},
+	title = {{Comsol software documentation. Perfectly Matched Layers (PMLs)}},
+	howpublished = {\url{https://doc.comsol.com/5.5/doc/com.comsol.help.aco/aco_ug_pressure.05.106.html}},
+	note = {Online; accessed: 2023-01-10}
+}
+
+@misc{PML_3ds,
+	author = {3DS},
+	title = {{CST Studio Suite documentation. Settings for PML Boundary}},
+	howpublished = {\url{https://space.mit.edu/RADIO/CST_online/mergedProjects/3D/special_solvopt/special_solvopt_pml_special.htm}},
+	note = {Online; accessed: 2023-01-10}
+}
+
+@article{Roppert_2020_nc_interface,
+	author = {Roppert, K. and Schoder, Stefan and Toth, Florian and Kaltenbacher, Manfred},
+	year = {2020},
+	month = {03},
+	pages = {1-1},
+	title = {Non-Conforming Nitsche Interfaces for Edge Elements in Curl–Curl-Type Problems},
+	volume = {PP},
+	journal = {IEEE Transactions on Magnetics},
+	doi = {10.1109/TMAG.2020.2980477}
+}
+
+@misc{cubit,
+	author = {Coreform LLC.},
+	title = {{Coreform Cubit (2022.4) [Computer Software]}},
+	howpublished = {\url{https://coreform.com/products/coreform-cubit/}},
+}
+
+@article{Kuo_2007_prefinement,
+	author = {Y.L. Kuo and W.L. Cleghorn},
+	title ={The h-, p-, and r-refinements of Finite Element Analysis of Flexible Slider Crank Mechanism},
+	journal = {Journal of Vibration and Control},
+	volume = {13},
+	number = {4},
+	pages = {415-435},
+	year = {2007},
+	doi = {10.1177/1077546307076901},
+	
+	URL = { 
+	https://doi.org/10.1177/1077546307076901
+	
+	},
+	eprint = { 
+	https://doi.org/10.1177/1077546307076901
+	},
 }
