--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 \usepackage{wallpaper}
 \usepackage[absolute]{textpos}
 \usepackage{float}
-\usepackage{siunitx}
+\usepackage[inter-unit-product =\cdot]{siunitx}
 
 
 \usepackage{pdfpages} %Einbinden von fertigen pdf-Seiten
